fixed Mastiff Section on Mobile view

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -217,11 +217,11 @@
   color: $color-dark;
   background-image: linear-gradient(
       100deg,
-      white 5%,
+      rgba(white, 0.7) 5%,
       rgba($color-light, 0.7) 15%,
       rgba($color-light, 0.7) 50%,
-      white 55%,
-      transparent 55%
+      rgba(white, 0.7) 55%,
+      rgba(transparent, 0) 55%
     ),
     url("images/mastiff.webp");
   background-size: cover;
@@ -231,7 +231,11 @@
   padding: 4rem;
 
   @media screen and (max-width: 770px) {
-    background-image: linear-gradient(to right, rgba($color-light, 0.7)),
+    background-image: linear-gradient(
+        to right,
+        rgba($color-light, 0.7),
+        rgba($color-light, 0.7)
+      ),
       url("images/mastiff.webp");
     grid-template-columns: 1fr;
   }
